ingress-demo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - host: "34.135.240.58.nip.io"
    http:
      paths:
      - path: /projects/.*
        pathType: Prefix
        backend:
          service:
            name: pms-main-service
            port:
              number: 8200
      - path: /counts/.*
        pathType: Prefix
        backend:
          service:
            name: project-counter-service
            port:
              number: 8201
     - path: /notifications/.*
        pathType: Prefix
        backend:
          service:
            name: pms-notification-service
            port:
              number: 8202
